fixed the size of the flipcard stories so that they don't misalign. fixes issue #155

--- a/web/src/main/webapp/css/ctd2.css
+++ b/web/src/main/webapp/css/ctd2.css
@@ -490,3 +490,8 @@ footer {
     border-right: 5px solid #f6f6f6;
 }
 
+.story-cards {
+    height: 300px;
+    overflow-y: auto;
+}
+
